[gd_scene load_steps=29 format=4 uid="uid://b7l2jqvr7i8xy"]

[ext_resource type="Texture2D" uid="uid://bt3u3ptunpkn4" path="res://sprites/Level/Test/tilebase.png" id="1_op1kn"]
[ext_resource type="Texture2D" uid="uid://d16ii6q60errr" path="res://sprites/Level/Test/tilenormal.png" id="2_wld7t"]
[ext_resource type="Texture2D" uid="uid://b36x7p5a0ed71" path="res://sprites/Level/Test/tileBlock.png" id="3_87u36"]
[ext_resource type="Texture2D" uid="uid://crpslm1ldd37l" path="res://sprites/Level/Test/Dungeon Tile Set.png" id="4_tqrat"]
[ext_resource type="PackedScene" uid="uid://dffpbxblrccr8" path="res://objects/Player.tscn" id="5_01ob5"]
[ext_resource type="PackedScene" uid="uid://bethmmluiqg0e" path="res://objects/damage.tscn" id="6_ikvp8"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="7_5bh18"]
[ext_resource type="Script" path="res://scripts/Controls/Room_Enter_Gravitational.gd" id="8_1aqin"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="8_cod75"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="9_0pucg"]
[ext_resource type="Script" path="res://scripts/Controls/Camera.gd" id="9_jw68b"]
[ext_resource type="Script" path="res://scripts/Controls/Room_Enter_Directional.gd" id="11_q6pfi"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j3fmu"]
texture = ExtResource("1_op1kn")
use_texture_padding = false
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nelig"]
texture = ExtResource("2_wld7t")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yo6dy"]
texture = ExtResource("3_87u36")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_txmxk"]
texture = ExtResource("4_tqrat")
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
1:2/0 = 0
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_df162"]
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_j3fmu")
sources/1 = SubResource("TileSetAtlasSource_nelig")
sources/2 = SubResource("TileSetAtlasSource_yo6dy")
sources/3 = SubResource("TileSetAtlasSource_txmxk")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8owi"]
size = Vector2(80, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g6n4q"]
size = Vector2(16, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l63al"]
size = Vector2(16, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vg2xh"]
size = Vector2(144, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y852h"]
size = Vector2(144, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_63r5o"]
size = Vector2(144, 16)

[sub_resource type="Resource" id="Resource_587sw"]
script = ExtResource("8_cod75")
duration = 0.001
transition = 0
ease = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qjjt2"]
size = Vector2(576, 496)

[sub_resource type="Resource" id="Resource_6032h"]
script = ExtResource("8_cod75")
duration = 0.001
transition = 0
ease = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3v0ty"]
size = Vector2(880, 368)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a7cjs"]
size = Vector2(592, 224)

[node name="Level" type="Node2D"]

[node name="Limiters" type="TileMapLayer" parent="."]
position = Vector2(211, -143)
tile_map_data = PackedByteArray("AAAKABwAAwACAAIAAAAJABwAAwACAAIAAAAIABwAAwACAAIAAAAHABwAAwACAAIAAAAGABwAAwACAAIAAAAFABwAAwACAAIAAAATABwAAwACAAIAAAANABwAAwACAAIAAAAMABwAAwACAAIAAAALABwAAwACAAIAAAD6/x0AAwACAAIAAAD8/xwAAwACAAIAAAD9/xwAAwACAAIAAAD+/xwAAwACAAIAAAD//xwAAwACAAIAAAAAABwAAwACAAIAAAABABwAAwACAAIAAAACABwAAwACAAIAAAADABwAAwACAAIAAAAEABwAAwACAAIAAAASAA4AAwACAAIAAAASAA8AAwACAAIAAAASABAAAwACAAIAAAASABEAAwACAAIAAAASABIAAwACAAIAAAATABIAAwACAAIAAAASAA0AAwACAAIAAAASAAwAAwACAAIAAAASAAsAAwACAAIAAAASAAoAAwACAAIAAAASAAkAAwACAAIAAAASAAgAAwACAAIAAAASAAcAAwACAAIAAAASAAYAAwACAAIAAAASAAUAAwACAAIAAAASAAQAAwACAAIAAAASAAMAAwACAAIAAAASAAIAAwACAAIAAAASAAEAAwACAAIAAAASAAAAAwACAAIAAAASAP//AwACAAIAAADw/x0AAwACAAIAAADv/x0AAwACAAIAAADv/xwAAwACAAIAAADw/xwAAwACAAIAAADv/xEAAwACAAIAAADw/xEAAwACAAIAAADv/xAAAwACAAIAAADw/xAAAwACAAIAAADv/w8AAwACAAIAAADw/w8AAwACAAIAAADv/w4AAwACAAIAAADw/w4AAwACAAIAAADv/w0AAwACAAIAAADw/w0AAwACAAIAAADv/wwAAwACAAIAAADw/wwAAwACAAIAAADv/wsAAwACAAIAAADw/wsAAwACAAIAAADv/woAAwACAAIAAADw/woAAwACAAIAAADv/wkAAwACAAIAAADw/wkAAwACAAIAAADv/wgAAwACAAIAAADw/wgAAwACAAIAAADv/wcAAwACAAIAAADw/wcAAwACAAIAAADv/wYAAwACAAIAAADw/wYAAwACAAIAAADv/wUAAwACAAIAAADw/wUAAwACAAIAAADv/wQAAwACAAIAAADw/wQAAwACAAIAAADv/wMAAwACAAIAAADw/wMAAwACAAIAAADv/wIAAwACAAIAAADw/wIAAwACAAIAAADv/wEAAwACAAIAAADw/wEAAwACAAIAAADv/wAAAwACAAIAAADw/wAAAwACAAIAAADv////AwACAAIAAADw////AwACAAIAAAAUABwAAwACAAIAAAAVABwAAwACAAIAAAAVAAcAAwACAAIAAAAWAAcAAwACAAIAAAAXAAcAAwACAAIAAAAYAAcAAwACAAIAAAAZAAcAAwACAAIAAAAaAAcAAwACAAIAAAASABwAAwACAAIAAAARABwAAwACAAIAAAAQABwAAwACAAIAAAAPABwAAwACAAIAAAAOABwAAwACAAIAAAAVAB0AAwACAAIAAAAUAB0AAwACAAIAAAATAB0AAwACAAIAAAASAB0AAwACAAIAAAARAB0AAwACAAIAAAAQAB0AAwACAAIAAAAPAB0AAwACAAIAAAAOAB0AAwACAAIAAAANAB0AAwACAAIAAAAMAB0AAwACAAIAAAALAB0AAwACAAIAAAAKAB0AAwACAAIAAAAJAB0AAwACAAIAAAAIAB0AAwACAAIAAAAHAB0AAwACAAIAAAAGAB0AAwACAAIAAAAFAB0AAwACAAIAAAAEAB0AAwACAAIAAAADAB0AAwACAAIAAAACAB0AAwACAAIAAAABAB0AAwACAAIAAAAAAB0AAwACAAIAAAD//x0AAwACAAIAAAD+/x0AAwACAAIAAAD9/x0AAwACAAIAAAD8/x0AAwACAAIAAAD7/x0AAwACAAIAAAD7/xwAAwACAAIAAAD6/xwAAwACAAIAAAATAA8AAwACAAIAAAATAA4AAwACAAIAAAATAA0AAwACAAIAAAATAAwAAwACAAIAAAATAAsAAwACAAIAAAATAAoAAwACAAIAAAATAAkAAwACAAIAAAATAAcAAwACAAIAAAATABEAAwACAAIAAAATABAAAwACAAIAAAATAAgAAwACAAIAAAATAAYAAwACAAIAAAATAAUAAwACAAIAAAATAAQAAwACAAIAAAATAAMAAwACAAIAAAATAAIAAwACAAIAAAATAAEAAwACAAIAAAATAAAAAwACAAIAAAATAP//AwACAAIAAAAVAAYAAwACAAIAAAAWAAYAAwACAAIAAAAXAAYAAwACAAIAAAAYAAYAAwACAAIAAAAZAAYAAwACAAIAAAAaAAYAAwACAAIAAAAbAAYAAwACAAIAAAAbAAcAAwACAAIAAAAcAAYAAwACAAIAAAAcAAcAAwACAAIAAAAdAAYAAwACAAIAAAAdAAcAAwACAAIAAAAeAAYAAwACAAIAAAAeAAcAAwACAAIAAAAfAAYAAwACAAIAAAAfAAcAAwACAAIAAAAgAAYAAwACAAIAAAAgAAcAAwACAAIAAAAhAAYAAwACAAIAAAAhAAcAAwACAAIAAAAiAAYAAwACAAIAAAAiAAcAAwACAAIAAAAjAAYAAwACAAIAAAAjAAcAAwACAAIAAAAkAAYAAwACAAIAAAAkAAcAAwACAAIAAAAlAAYAAwACAAIAAAAlAAcAAwACAAIAAAAmAAYAAwACAAIAAAAmAAcAAwACAAIAAAAnAAYAAwACAAIAAAAnAAcAAwACAAIAAAAoAAYAAwACAAIAAAAoAAcAAwACAAIAAAApAAYAAwACAAIAAAApAAcAAwACAAIAAAAqAAYAAwACAAIAAAAqAAcAAwACAAIAAAArAAYAAwACAAIAAAArAAcAAwACAAIAAAAsAAYAAwACAAIAAAAsAAcAAwACAAIAAAAtAAYAAwACAAIAAAAtAAcAAwACAAIAAAAuAAYAAwACAAIAAAAuAAcAAwACAAIAAAAvAAYAAwACAAIAAAAvAAcAAwACAAIAAAAwAAYAAwACAAIAAAAwAAcAAwACAAIAAAAxAAYAAwACAAIAAAAxAAcAAwACAAIAAAAyAAYAAwACAAIAAAAyAAcAAwACAAIAAAAzAAYAAwACAAIAAAAzAAcAAwACAAIAAAA0AAYAAwACAAIAAAA0AAcAAwACAAIAAAA1AAYAAwACAAIAAAA1AAcAAwACAAIAAAA2AAYAAwACAAIAAAA2AAcAAwACAAIAAAA3AAYAAwACAAIAAAA3AAcAAwACAAIAAAA4AAYAAwACAAIAAAA4AAcAAwACAAIAAAA5AAYAAwACAAIAAAA5AAcAAwACAAIAAAA6AAYAAwACAAIAAAA6AAcAAwACAAIAAAA7AAYAAwACAAIAAAA7AAcAAwACAAIAAAA8AAYAAwACAAIAAAA8AAcAAwACAAIAAAA9AAYAAwACAAIAAAA9AAcAAwACAAIAAAA+AAYAAwACAAIAAAA+AAcAAwACAAIAAAA/AAYAAwACAAIAAAA/AAcAAwACAAIAAABAAAYAAwACAAIAAABAAAcAAwACAAIAAABBAAYAAwACAAIAAABBAAcAAwACAAIAAABCAAYAAwACAAIAAABCAAcAAwACAAIAAABDAAYAAwACAAIAAABDAAcAAwACAAIAAABEAAYAAwACAAIAAABEAAcAAwACAAIAAABFAAYAAwACAAIAAABFAAcAAwACAAIAAABGAAYAAwACAAIAAABGAAcAAwACAAIAAABHAAYAAwACAAIAAABHAAcAAwACAAIAAABIAAYAAwACAAIAAABIAAcAAwACAAIAAABJAAYAAwACAAIAAABJAAcAAwACAAIAAABKAAYAAwACAAIAAABKAAcAAwACAAIAAABLAAYAAwACAAIAAABLAAcAAwACAAIAAABMAAYAAwACAAIAAABMAAcAAwACAAIAAABMAAgAAwACAAIAAABMAAkAAwACAAIAAABNAAYAAwACAAIAAABNAAcAAwACAAIAAABNAAgAAwACAAIAAABNAAkAAwACAAIAAABMAAoAAwACAAIAAABNAAoAAwACAAIAAABMAAsAAwACAAIAAABNAAsAAwACAAIAAABMAAwAAwACAAIAAABNAAwAAwACAAIAAABMAA0AAwACAAIAAABNAA0AAwACAAIAAABMAA4AAwACAAIAAABNAA4AAwACAAIAAABMAA8AAwACAAIAAABNAA8AAwACAAIAAABMABAAAwACAAIAAABNABAAAwACAAIAAABMABEAAwACAAIAAABNABEAAwACAAIAAABMABIAAwACAAIAAABNABIAAwACAAIAAABMABMAAwACAAIAAABNABMAAwACAAIAAABMABQAAwACAAIAAABNABQAAwACAAIAAABMABUAAwACAAIAAABNABUAAwACAAIAAABMABYAAwACAAIAAABNABYAAwACAAIAAABMABcAAwACAAIAAABNABcAAwACAAIAAABMABgAAwACAAIAAABNABgAAwACAAIAAABMABkAAwACAAIAAABNABkAAwACAAIAAABMABoAAwACAAIAAABNABoAAwACAAIAAABMABsAAwACAAIAAABNABsAAwACAAIAAABMABwAAwACAAIAAABNABwAAwACAAIAAABMAB0AAwACAAIAAABNAB0AAwACAAIAAABFAB0AAwACAAIAAABGAB0AAwACAAIAAABEAB0AAwACAAIAAABEABwAAwACAAIAAABFABwAAwACAAIAAABGABwAAwACAAIAAABDABwAAwACAAIAAABDAB0AAwACAAIAAABCABwAAwACAAIAAABCAB0AAwACAAIAAABBABwAAwACAAIAAABBAB0AAwACAAIAAABAABwAAwACAAIAAABAAB0AAwACAAIAAAA/ABwAAwACAAIAAAA/AB0AAwACAAIAAAA+ABwAAwACAAIAAAA+AB0AAwACAAIAAAA9ABwAAwACAAIAAAA9AB0AAwACAAIAAAA8ABwAAwACAAIAAAA8AB0AAwACAAIAAAA7ABwAAwACAAIAAAA7AB0AAwACAAIAAAA6ABwAAwACAAIAAAA6AB0AAwACAAIAAAA5ABwAAwACAAIAAAA5AB0AAwACAAIAAAA4ABwAAwACAAIAAAA4AB0AAwACAAIAAAA3ABwAAwACAAIAAAA3AB0AAwACAAIAAAA2ABwAAwACAAIAAAA2AB0AAwACAAIAAAA1ABwAAwACAAIAAAA1AB0AAwACAAIAAAA0ABwAAwACAAIAAAA0AB0AAwACAAIAAAAzABwAAwACAAIAAAAzAB0AAwACAAIAAAAyABwAAwACAAIAAAAyAB0AAwACAAIAAAAxABwAAwACAAIAAAAxAB0AAwACAAIAAAAwABwAAwACAAIAAAAwAB0AAwACAAIAAAAvABwAAwACAAIAAAAvAB0AAwACAAIAAAAuABwAAwACAAIAAAAuAB0AAwACAAIAAAAtABwAAwACAAIAAAAtAB0AAwACAAIAAAAsABwAAwACAAIAAAAsAB0AAwACAAIAAAArABwAAwACAAIAAAArAB0AAwACAAIAAAAqABwAAwACAAIAAAAqAB0AAwACAAIAAAApABwAAwACAAIAAAApAB0AAwACAAIAAAAoABwAAwACAAIAAAAoAB0AAwACAAIAAAAnABwAAwACAAIAAAAnAB0AAwACAAIAAAAmABwAAwACAAIAAAAmAB0AAwACAAIAAAAlABwAAwACAAIAAAAlAB0AAwACAAIAAAAkABwAAwACAAIAAAAkAB0AAwACAAIAAAAjABwAAwACAAIAAAAjAB0AAwACAAIAAAAiABwAAwACAAIAAAAiAB0AAwACAAIAAAAhABwAAwACAAIAAAAhAB0AAwACAAIAAAAgABwAAwACAAIAAAAgAB0AAwACAAIAAAAfABwAAwACAAIAAAAfAB0AAwACAAIAAAAeABwAAwACAAIAAAAeAB0AAwACAAIAAAAdABwAAwACAAIAAAAdAB0AAwACAAIAAAAcABwAAwACAAIAAAAcAB0AAwACAAIAAAAbABwAAwACAAIAAAAbAB0AAwACAAIAAAAaABwAAwACAAIAAAAaAB0AAwACAAIAAAAZABwAAwACAAIAAAAZAB0AAwACAAIAAAAYABwAAwACAAIAAAAYAB0AAwACAAIAAAAXABwAAwACAAIAAAAXAB0AAwACAAIAAAAWABwAAwACAAIAAAAWAB0AAwACAAIAAAAWABIAAwACAAIAAAAWABEAAwACAAIAAAAWABAAAwACAAIAAAAWAA8AAwACAAIAAAAWAA4AAwACAAIAAAAWAA0AAwACAAIAAAAWAAwAAwACAAIAAAAWAAsAAwACAAIAAAAWAAoAAwACAAIAAAAWAAkAAwACAAIAAAAWAAgAAwACAAIAAAAlABsAAwACAAIAAAAlABoAAwACAAIAAAAlABkAAwACAAIAAAAlABgAAwACAAIAAAAmABgAAwACAAIAAAAnABgAAwACAAIAAAAoABgAAwACAAIAAAAoABkAAwACAAIAAAAnABkAAwACAAIAAAAnABoAAwACAAIAAAAnABsAAwACAAIAAAAmABsAAwACAAIAAAAmABoAAwACAAIAAAAmABkAAwACAAIAAAAoABoAAwACAAIAAAAoABsAAwACAAIAAAAxABsAAwACAAIAAAAwABsAAwACAAIAAAAwABoAAwACAAIAAAAwABkAAwACAAIAAAAwABgAAwACAAIAAAAwABcAAwACAAIAAAAwABYAAwACAAIAAAAwABUAAwACAAIAAAAxABUAAwACAAIAAAAyABUAAwACAAIAAAAzABUAAwACAAIAAAA0ABUAAwACAAIAAAA1ABUAAwACAAIAAAA1ABYAAwACAAIAAAA1ABcAAwACAAIAAAA1ABgAAwACAAIAAAA1ABkAAwACAAIAAAA1ABoAAwACAAIAAAA1ABsAAwACAAIAAAA0ABsAAwACAAIAAAAzABsAAwACAAIAAAAyABsAAwACAAIAAAAyABoAAwACAAIAAAAzABoAAwACAAIAAAA0ABoAAwACAAIAAAA0ABkAAwACAAIAAAA0ABgAAwACAAIAAAAzABgAAwACAAIAAAAzABcAAwACAAIAAAAzABYAAwACAAIAAAAyABYAAwACAAIAAAAyABcAAwACAAIAAAAyABgAAwACAAIAAAAxABkAAwACAAIAAAAyABkAAwACAAIAAAAzABkAAwACAAIAAAA0ABYAAwACAAIAAAA0ABcAAwACAAIAAAAxABgAAwACAAIAAAAxABcAAwACAAIAAAAxABYAAwACAAIAAAAxABoAAwACAAIAAAA/ABsAAwACAAIAAAA/ABoAAwACAAIAAAA/ABkAAwACAAIAAAA/ABgAAwACAAIAAAA/ABcAAwACAAIAAAA/ABYAAwACAAIAAAA/ABUAAwACAAIAAAA/ABQAAwACAAIAAAA/ABMAAwACAAIAAAA/ABIAAwACAAIAAAA/ABEAAwACAAIAAABAABEAAwACAAIAAABBABEAAwACAAIAAABCABEAAwACAAIAAABDABEAAwACAAIAAABEABEAAwACAAIAAABFABEAAwACAAIAAABGABEAAwACAAIAAABGABsAAwACAAIAAABGABoAAwACAAIAAABGABkAAwACAAIAAABGABgAAwACAAIAAABGABcAAwACAAIAAABGABYAAwACAAIAAABGABUAAwACAAIAAABFABUAAwACAAIAAABFABQAAwACAAIAAABFABMAAwACAAIAAABFABIAAwACAAIAAABGABIAAwACAAIAAABGABMAAwACAAIAAABGABQAAwACAAIAAABFABYAAwACAAIAAABFABcAAwACAAIAAABFABgAAwACAAIAAABFABkAAwACAAIAAABEABkAAwACAAIAAABEABoAAwACAAIAAABEABsAAwACAAIAAABDABoAAwACAAIAAABFABoAAwACAAIAAABFABsAAwACAAIAAABDABsAAwACAAIAAABCABsAAwACAAIAAABCABoAAwACAAIAAABBABoAAwACAAIAAABAABoAAwACAAIAAABAABsAAwACAAIAAABBABsAAwACAAIAAABBABkAAwACAAIAAABAABkAAwACAAIAAABBABgAAwACAAIAAABCABgAAwACAAIAAABDABgAAwACAAIAAABEABgAAwACAAIAAABDABkAAwACAAIAAABCABkAAwACAAIAAABAABcAAwACAAIAAABBABYAAwACAAIAAABCABYAAwACAAIAAABDABcAAwACAAIAAABAABgAAwACAAIAAABAABYAAwACAAIAAABDABYAAwACAAIAAABEABYAAwACAAIAAABEABcAAwACAAIAAABBABcAAwACAAIAAABCABUAAwACAAIAAABDABUAAwACAAIAAABCABcAAwACAAIAAABDABQAAwACAAIAAABEABQAAwACAAIAAABEABMAAwACAAIAAABEABUAAwACAAIAAABBABUAAwACAAIAAABAABUAAwACAAIAAABAABQAAwACAAIAAABAABMAAwACAAIAAABAABIAAwACAAIAAABBABIAAwACAAIAAABCABIAAwACAAIAAABDABIAAwACAAIAAABDABMAAwACAAIAAABCABQAAwACAAIAAABEABIAAwACAAIAAABBABMAAwACAAIAAABBABQAAwACAAIAAABCABMAAwACAAIAAAA+ABoAAwACAAIAAAA+ABkAAwACAAIAAAA+ABgAAwACAAIAAAA+ABYAAwACAAIAAAA+ABUAAwACAAIAAAA+ABQAAwACAAIAAAA+ABMAAwACAAIAAAA+ABEAAwACAAIAAAA+ABIAAwACAAIAAAA+ABcAAwACAAIAAAA+ABsAAwACAAIAAAD7/x4AAwACAAIAAAD6/x4AAwACAAIAAAD7/x8AAwACAAIAAAD6/x8AAwACAAIAAADw/x4AAwACAAIAAADv/x4AAwACAAIAAADv/x8AAwACAAIAAADw/x8AAwACAAIAAADw/yAAAwACAAIAAADv/yAAAwACAAIAAAD6/yAAAwACAAIAAAD7/yAAAwACAAIAAAD6/yEAAwACAAIAAAD7/yEAAwACAAIAAADw/yEAAwACAAIAAADv/yEAAwACAAIAAAD8/yEAAwACAAIAAAD9/yEAAwACAAIAAAD+/yEAAwACAAIAAAD//yEAAwACAAIAAAAAACEAAwACAAIAAAABACEAAwACAAIAAAACACEAAwACAAIAAAADACEAAwACAAIAAAAEACEAAwACAAIAAAAFACEAAwACAAIAAAAGACEAAwACAAIAAAAHACEAAwACAAIAAAAIACEAAwACAAIAAAAJACEAAwACAAIAAAAKACEAAwACAAIAAAALACEAAwACAAIAAAAMACEAAwACAAIAAAANACEAAwACAAIAAAAOACEAAwACAAIAAAAPACEAAwACAAIAAAAQACEAAwACAAIAAAARACEAAwACAAIAAAASACEAAwACAAIAAAATACEAAwACAAIAAAATACIAAwACAAIAAAATACMAAwACAAIAAAATACQAAwACAAIAAAATACUAAwACAAIAAAATACYAAwACAAIAAAATACcAAwACAAIAAAATACgAAwACAAIAAAATACkAAwACAAIAAAATACoAAwACAAIAAAATACsAAwACAAIAAAATACwAAwACAAIAAAATAC0AAwACAAIAAAASAC0AAwACAAIAAAARAC0AAwACAAIAAAAQAC0AAwACAAIAAAAPAC0AAwACAAIAAAAOAC0AAwACAAIAAAANAC0AAwACAAIAAAAMAC0AAwACAAIAAAALAC0AAwACAAIAAAAKAC0AAwACAAIAAAAJAC0AAwACAAIAAAAIAC0AAwACAAIAAAAHAC0AAwACAAIAAAAGAC0AAwACAAIAAAAFAC0AAwACAAIAAAAEAC0AAwACAAIAAAADAC0AAwACAAIAAAACAC0AAwACAAIAAAABAC0AAwACAAIAAAAAAC0AAwACAAIAAAD//y0AAwACAAIAAAD+/y0AAwACAAIAAAD9/y0AAwACAAIAAAD8/y0AAwACAAIAAAD7/y0AAwACAAIAAAD6/y0AAwACAAIAAAD5/y0AAwACAAIAAAD4/y0AAwACAAIAAAD3/y0AAwACAAIAAAD2/y0AAwACAAIAAAD1/y0AAwACAAIAAAD0/y0AAwACAAIAAADz/y0AAwACAAIAAADy/y0AAwACAAIAAADx/y0AAwACAAIAAADw/y0AAwACAAIAAADv/y0AAwACAAIAAADv/yIAAwACAAIAAADv/yMAAwACAAIAAADv/yQAAwACAAIAAADv/yUAAwACAAIAAADv/yYAAwACAAIAAADv/ycAAwACAAIAAADv/ygAAwACAAIAAADv/ykAAwACAAIAAADv/yoAAwACAAIAAADv/ysAAwACAAIAAADv/ywAAwACAAIAAADw/yIAAwACAAIAAADw/yMAAwACAAIAAADw/yQAAwACAAIAAADw/yUAAwACAAIAAADw/yYAAwACAAIAAADw/ycAAwACAAIAAADw/ygAAwACAAIAAADw/ykAAwACAAIAAADw/yoAAwACAAIAAADw/ysAAwACAAIAAADw/ywAAwACAAIAAAATAC4AAwACAAIAAAASAC4AAwACAAIAAAARAC4AAwACAAIAAAAQAC4AAwACAAIAAAAPAC4AAwACAAIAAAAOAC4AAwACAAIAAAANAC4AAwACAAIAAAAMAC4AAwACAAIAAAALAC4AAwACAAIAAAAKAC4AAwACAAIAAAAJAC4AAwACAAIAAAAIAC4AAwACAAIAAAAHAC4AAwACAAIAAAAGAC4AAwACAAIAAAAFAC4AAwACAAIAAAAEAC4AAwACAAIAAAADAC4AAwACAAIAAAACAC4AAwACAAIAAAABAC4AAwACAAIAAAAAAC4AAwACAAIAAAD//y4AAwACAAIAAAD+/y4AAwACAAIAAAD9/y4AAwACAAIAAAD8/y4AAwACAAIAAAD7/y4AAwACAAIAAAD6/y4AAwACAAIAAAD5/y4AAwACAAIAAAD4/y4AAwACAAIAAAD3/y4AAwACAAIAAAD2/y4AAwACAAIAAAD1/y4AAwACAAIAAAD0/y4AAwACAAIAAADz/y4AAwACAAIAAADx/y4AAwACAAIAAADy/y4AAwACAAIAAADw/y4AAwACAAIAAADv/y4AAwACAAIAAAASACIAAwACAAIAAAASACMAAwACAAIAAAASACQAAwACAAIAAAASACUAAwACAAIAAAASACYAAwACAAIAAAASACcAAwACAAIAAAASACgAAwACAAIAAAASACkAAwACAAIAAAASACoAAwACAAIAAAASACsAAwACAAIAAAASACwAAwACAAIAAAD5/x8AAAAAAAAAAAD4/x8AAAAAAAAAAAD3/x8AAAAAAAAAAAD2/x8AAAAAAAAAAAD1/x8AAAAAAAAAAAD0/x8AAAAAAAAAAADz/x8AAAAAAAAAAADy/x8AAAAAAAAAAADx/x8AAAAAAAAAAADx/x4AAgAAAAAAAADy/x4AAgAAAAAAAADz/x4AAgAAAAAAAAD0/x4AAgAAAAAAAAD1/x4AAgAAAAAAAAD2/x4AAgAAAAAAAAD3/x4AAgAAAAAAAAD4/x4AAgAAAAAAAAD5/x4AAgAAAAAAAAATABsAAgAAAAAAAAAUABsAAAAAAAAAAAAVABsAAgAAAAAAAAAVABoAAgAAAAAAAAAVABkAAgAAAAAAAAAVABgAAgAAAAAAAAAVABcAAgAAAAAAAAAVABYAAgAAAAAAAAAVABUAAgAAAAAAAAAVABQAAgAAAAAAAAAVABMAAgAAAAAAAAAUABMAAAAAAAAAAAATABMAAgAAAAAAAAATABQAAgAAAAAAAAATABUAAgAAAAAAAAATABYAAgAAAAAAAAATABcAAgAAAAAAAAATABgAAgAAAAAAAAATABkAAgAAAAAAAAAUABkAAAAAAAAAAAAUABoAAAAAAAAAAAATABoAAgAAAAAAAAAUABgAAAAAAAAAAAAUABcAAAAAAAAAAAAUABYAAAAAAAAAAAAUABUAAAAAAAAAAAAUABQAAAAAAAAAAADx/yAAAgAAAAAAAADy/yAAAgAAAAAAAADz/yAAAgAAAAAAAAD0/yAAAgAAAAAAAAD1/yAAAgAAAAAAAAD2/yAAAgAAAAAAAAD3/yAAAgAAAAAAAAD4/yAAAgAAAAAAAAD5/yAAAgAAAAAAAAASABsAAQAAAAAAAAASABoAAQAAAAAAAAASABkAAQAAAAAAAAASABgAAQAAAAAAAAASABcAAQAAAAAAAAASABYAAQAAAAAAAAASABUAAQAAAAAAAAASABQAAQAAAAAAAAASABMAAQAAAAAAAAAWABMAAQAAAAAAAAAWABQAAQAAAAAAAAAWABUAAQAAAAAAAAAWABYAAQAAAAAAAAAWABcAAQAAAAAAAAAWABgAAQAAAAAAAAAWABkAAQAAAAAAAAAWABoAAQAAAAAAAAAWABsAAQAAAAAAAAD5/yEAAQAAAAAAAAD4/yEAAQAAAAAAAAD3/yEAAQAAAAAAAAD2/yEAAQAAAAAAAAD1/yEAAQAAAAAAAAD0/yEAAQAAAAAAAADz/yEAAQAAAAAAAADy/yEAAQAAAAAAAADx/yEAAQAAAAAAAAD5/x0AAQAAAAAAAAD4/x0AAQAAAAAAAAD3/x0AAQAAAAAAAAD2/x0AAQAAAAAAAAD1/x0AAQAAAAAAAAD0/x0AAQAAAAAAAADz/x0AAQAAAAAAAADy/x0AAQAAAAAAAADx/x0AAQAAAAAAAAD6/yIAAwACAAIAAAD7/yIAAwACAAIAAAD8/yIAAwACAAIAAAD9/yIAAwACAAIAAAD+/yIAAwACAAIAAAD//yIAAwACAAIAAAAAACIAAwACAAIAAAABACIAAwACAAIAAAACACIAAwACAAIAAAADACIAAwACAAIAAAAEACIAAwACAAIAAAAFACIAAwACAAIAAAAGACIAAwACAAIAAAAHACIAAwACAAIAAAAIACIAAwACAAIAAAAJACIAAwACAAIAAAAKACIAAwACAAIAAAALACIAAwACAAIAAAAMACIAAwACAAIAAAANACIAAwACAAIAAAAOACIAAwACAAIAAAAPACIAAwACAAIAAAAQACIAAwACAAIAAAARACIAAwACAAIAAAAVABIAAwACAAIAAAAVABEAAwACAAIAAAAVABAAAwACAAIAAAAVAA8AAwACAAIAAAAVAA4AAwACAAIAAAAVAA0AAwACAAIAAAAVAAwAAwACAAIAAAAVAAsAAwACAAIAAAAVAAoAAwACAAIAAAAVAAkAAwACAAIAAAAVAAgAAwACAAIAAAAUABIAAwACAAIAAAAUABEAAwACAAIAAAAUABAAAwACAAIAAAAUAA8AAwACAAIAAAAUAA4AAwACAAIAAAAUAA0AAwACAAIAAAAUAAwAAwACAAIAAAAUAAsAAwACAAIAAAAUAAoAAwACAAIAAAAUAAkAAwACAAIAAAAUAAgAAwACAAIAAAAUAAcAAwACAAIAAAAUAAYAAwACAAIAAAA=")
tile_set = SubResource("TileSet_df162")

[node name="Player" parent="." instance=ExtResource("5_01ob5")]
position = Vector2(227, -236)

[node name="Damage" parent="." instance=ExtResource("6_ikvp8")]
position = Vector2(1541, -550)
scale = Vector2(58.72, 1)

[node name="Room_Entraces" type="Node2D" parent="."]

[node name="Room_entrance_0" type="Area2D" parent="Room_Entraces" node_paths=PackedStringArray("left_area", "right_area")]
position = Vector2(539, 233)
script = ExtResource("11_q6pfi")
left_area = NodePath("../../Camera_Limiters/Room_1")
right_area = NodePath("../../Camera_Limiters/Room_0")

[node name="Collision" type="CollisionShape2D" parent="Room_Entraces/Room_entrance_0"]
shape = SubResource("RectangleShape2D_s8owi")
debug_color = Color(0.904703, 0.152447, 0.652706, 0.42)

[node name="Right_area" type="Area2D" parent="Room_Entraces/Room_entrance_0"]

[node name="Right" type="CollisionShape2D" parent="Room_Entraces/Room_entrance_0/Right_area"]
position = Vector2(32, 0)
shape = SubResource("RectangleShape2D_g6n4q")
debug_color = Color(0, 0.494563, 0.536543, 0.42)

[node name="Left_area" type="Area2D" parent="Room_Entraces/Room_entrance_0"]

[node name="Left" type="CollisionShape2D" parent="Room_Entraces/Room_entrance_0/Left_area"]
position = Vector2(-32, 0)
shape = SubResource("RectangleShape2D_l63al")
debug_color = Color(0.847261, 0.692124, 0, 0.42)

[node name="Point" type="Node2D" parent="Room_Entraces/Room_entrance_0"]
position = Vector2(0, 60)

[node name="Room_entrance_1" type="Area2D" parent="Room_Entraces" node_paths=PackedStringArray("down_area", "up_area")]
position = Vector2(53, 337)
script = ExtResource("8_1aqin")
down_area = NodePath("../../Camera_Limiters/Room_2")
up_area = NodePath("../../Camera_Limiters/Room_0")
jump_right = true

[node name="Collision" type="CollisionShape2D" parent="Room_Entraces/Room_entrance_1"]
position = Vector2(-10, 24)
shape = SubResource("RectangleShape2D_vg2xh")
debug_color = Color(0.690911, 0.489752, 0.248143, 0.42)

[node name="Down_area" type="Area2D" parent="Room_Entraces/Room_entrance_1"]
position = Vector2(-10, 16)

[node name="Down" type="CollisionShape2D" parent="Room_Entraces/Room_entrance_1/Down_area"]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_y852h")
debug_color = Color(0.811138, 0, 0.241925, 0.42)

[node name="Up_area" type="Area2D" parent="Room_Entraces/Room_entrance_1"]
position = Vector2(-10, 16)

[node name="Up" type="CollisionShape2D" parent="Room_Entraces/Room_entrance_1/Up_area"]
position = Vector2(0, 40)
shape = SubResource("RectangleShape2D_63r5o")
debug_color = Color(0.554641, 0.706385, 1, 0.42)

[node name="Point" type="Node2D" parent="Room_Entraces/Room_entrance_1"]
position = Vector2(-10, 16)

[node name="Camera_Limiters" type="Node2D" parent="."]

[node name="Room_0" type="Area2D" parent="Camera_Limiters" groups=["room"]]
position = Vector2(-3, 327)

[node name="Camera" type="Node2D" parent="Camera_Limiters/Room_0"]
position = Vector2(230, -152)
script = ExtResource("7_5bh18")
follow_mode = 2
zoom = Vector2(2, 2)
snap_to_pixel = true
tween_resource = SubResource("Resource_587sw")
follow_damping = true
draw_limits = true
limit_target = NodePath("../Collision")
limit_margin = Vector4i(0, -26, 0, 0)

[node name="Collision" type="CollisionShape2D" parent="Camera_Limiters/Room_0"]
position = Vector2(230, -238)
shape = SubResource("RectangleShape2D_qjjt2")

[node name="Room_1" type="Area2D" parent="Camera_Limiters" groups=["room"]]
position = Vector2(573, 327)

[node name="Camera" type="Node2D" parent="Camera_Limiters/Room_1"]
position = Vector2(182, -250)
script = ExtResource("7_5bh18")
follow_mode = 2
zoom = Vector2(3, 3)
snap_to_pixel = true
tween_resource = SubResource("Resource_6032h")
follow_damping = true
draw_limits = true
limit_target = NodePath("../Collision")

[node name="Collision" type="CollisionShape2D" parent="Camera_Limiters/Room_1"]
position = Vector2(430, -174)
shape = SubResource("RectangleShape2D_3v0ty")

[node name="Room_2" type="Area2D" parent="Camera_Limiters" groups=["room"]]
position = Vector2(-46, 594)

[node name="Camera" type="Node2D" parent="Camera_Limiters/Room_2"]
position = Vector2(273, -73)
script = ExtResource("7_5bh18")
follow_mode = 2
zoom = Vector2(2, 2)
snap_to_pixel = true
tween_resource = SubResource("Resource_587sw")
follow_damping = true
draw_limits = true
limit_target = NodePath("../Collision")
limit_margin = Vector4i(0, -26, 0, 0)

[node name="Collision" type="CollisionShape2D" parent="Camera_Limiters/Room_2"]
position = Vector2(281, -97)
shape = SubResource("RectangleShape2D_a7cjs")

[node name="CameraPlayer" type="Camera2D" parent="."]
position = Vector2(227, 175)
zoom = Vector2(2, 2)
limit_left = -61
limit_top = -185
limit_right = 515
limit_bottom = 337
editor_draw_limits = true
script = ExtResource("9_jw68b")

[node name="PhantomCameraHost" type="Node" parent="CameraPlayer"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("9_0pucg")

[connection signal="body_entered" from="Room_Entraces/Room_entrance_0" to="Room_Entraces/Room_entrance_0" method="_on_body_entered"]
[connection signal="body_entered" from="Room_Entraces/Room_entrance_0/Right_area" to="Room_Entraces/Room_entrance_0" method="_on_right_area_body_entered"]
[connection signal="body_entered" from="Room_Entraces/Room_entrance_0/Left_area" to="Room_Entraces/Room_entrance_0" method="_on_left_area_body_entered"]
[connection signal="body_entered" from="Room_Entraces/Room_entrance_1" to="Room_Entraces/Room_entrance_1" method="_on_body_entered"]
[connection signal="body_entered" from="Room_Entraces/Room_entrance_1/Down_area" to="Room_Entraces/Room_entrance_1" method="_on_down_area_body_entered"]
[connection signal="body_entered" from="Room_Entraces/Room_entrance_1/Up_area" to="Room_Entraces/Room_entrance_1" method="_on_up_area_body_entered"]
